3/3.2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-pingpong-dep
  namespace: mp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-pingpong
  template:
    metadata:
      labels:
        app: main-pingpong
    spec:
      containers:
        - name: mainapp
          image: jhiekkap/mainapp:v4
          imagePullPolicy: Always
        - name: pingpong
          image: jhiekkap/pingpong:v6
          imagePullPolicy: Always
