3/3.2/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: mp
spec:
  type: NodePort
  selector:
    app: main-pingpong
  ports:
    # - name: http 
      - port: 80
        protocol: TCP
        targetPort: 3001
