3/3.2/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mainapp-pingpong-ingress
  namespace: mp
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: mainapp-svc
              servicePort: 80
          - path: /pingpongs
            backend:
              serviceName: pingpong-svc
              servicePort: 80
          - path: /ping
            backend:
              serviceName: pingpong-svc
              servicePort: 80 
          - path: /droptable
            backend:
              serviceName: pingpong-svc
              servicePort: 80 
          - path: /init
            backend:
              serviceName: pingpong-svc
              servicePort: 80
